Ensure bars always visible

--- a/inst/www/table.css
+++ b/inst/www/table.css
@@ -13,6 +13,7 @@
   background-color: #C7333F;
   -moz-top-border-radius: 4px 0 0 4px;
   -webkit-border-radius: 4px 0 0 4px;
+  min-width: 1px;
 }
 
 
